mobile spacing issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ nav {
 
 .hero h1 {
   color: white;
-  align-self: center;
+  text-align: center;
   font-size: 28px;
 }
 
